added some layout and content

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,1 +1,9 @@
 // Specific CSS for your home-page
+.home-page {
+  background-color: #e7e7de;
+  transition: all 0.3s ease 0s;
+}
+
+.header {
+  text-align: center;
+}
