--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,3 +11,8 @@
 // Your CSS partials
 @import "components/index";
 @import "pages/index";
+@import "components/container";
+@import "components/images";
+@import "components/cards";
+@import "components/about";
+@import "components/projects";
