moving onto projects

--- a/app/assets/stylesheets/components/_images.scss
+++ b/app/assets/stylesheets/components/_images.scss
@@ -4,3 +4,10 @@
   width: 250px;
   margin: 8px;
 }
+
+.picture-project {
+  object-fit: cover;
+  height: 250px;
+  width: 350px;
+  margin: 8px;
+}
