--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -51,7 +51,9 @@
   <div class="container-projects">
     <h2>Some of my former projects</h2>
     <div class="cards-projects">
-      <div class="project">Hotspots</div>
+      <div class="project">Hotspots <br>
+        <%=image_tag("hotspots.png", class: "picture-project") %>
+      </div>
       <div class="project">Infitter</div>
       <div class="project">Cocktail site</div>
     </div>
