--- a/app/assets/stylesheets/components/_images.scss
+++ b/app/assets/stylesheets/components/_images.scss
@@ -8,6 +8,9 @@
 .picture-project {
   object-fit: cover;
   height: 250px;
-  width: 350px;
-  margin: 8px;
+  width: 360px;
+  margin-top: 8px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
